--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,10 @@ APP_SECRET=3d5ec150cf67efb977da4f1ad1fe0047
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://accownting:accownting@db:3306/accownting
+###< doctrine/doctrine-bundle ###
