--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/security-bundle": "*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "*"
     },
     "require-dev": {
