--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: php
 php:
   - '7.2'
 
-script:
-  - composer install
-  - vendor/bin/phpcs --error-severity=1 --warning-severity=8 --extensions=php
-  - vendor/bin/phpmd src/ text controversial,design,unusedcode --exclude src/Migrations/
-  - vendor/bin/phpstan analyse -l max -c phpstan.neon src
-  - vendor/bin/security-checker security:check composer.lock
-  - SYMFONY_DEPRECATIONS_HELPER=weak bin/phpunit -d memory_limit=-1
+jobs:
+  include:
+    - stage: "Tests"
+      script:
+        - composer install
+        - vendor/bin/phpcs --error-severity=1 --warning-severity=8 --extensions=php
+        - vendor/bin/phpmd src/ text controversial,design,unusedcode --exclude src/Migrations/
+        - vendor/bin/phpstan analyse -l max -c phpstan.neon src
+        - vendor/bin/security-checker security:check composer.lock
+        - SYMFONY_DEPRECATIONS_HELPER=weak bin/phpunit -d memory_limit=-1
