--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,27 @@ language: php
 php:
   - '7.2'
 
+before_install:
+  - curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+  - sudo apt-key adv --keyserver pgp.mit.edu --recv D101F7899D41F3C3
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+
 jobs:
   include:
     - stage: "Tests"
       script:
         - composer install
+        - yarn
+        - yarn run encore production
         - vendor/bin/phpcs --error-severity=1 --warning-severity=8 --extensions=php
         - vendor/bin/phpmd src/ text controversial,design,unusedcode --exclude src/Migrations/
         - vendor/bin/phpstan analyse -l max -c phpstan.neon src
         - vendor/bin/security-checker security:check composer.lock
         - SYMFONY_DEPRECATIONS_HELPER=weak bin/phpunit -d memory_limit=-1
+    - stage: "Build"
+      script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -t "jost-devops/accownting:dev" .
+        - docker push jost-devops/accownting:dev
