--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ jobs:
     - stage: "Tests"
       script:
         - curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
-        - sudo apt-key adv --keyserver pgp.mit.edu --recv D101F7899D41F3C3
-        - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+        - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+        - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
         - sudo apt-get update -qq
         - sudo apt-get install -y -qq yarn
         - composer install
