--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jobs:
         - vendor/bin/security-checker security:check composer.lock
         - SYMFONY_DEPRECATIONS_HELPER=weak bin/phpunit -d memory_limit=-1
     - stage: "Build"
+      if: branch = master
       script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker build -t "jostdevops/accownting:dev" .
