--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,11 @@ services:
       - "internal"
 
   "app":
-    ports:
-      - "8083:80"
     build:
       context: "./"
+      dockerfile: "./Dockerfile.dev"
+    ports:
+      - "8083:80"
     volumes:
       - "./:/var/www"
     networks:
