--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "admin-lte": "3.0.0-alpha.2",
         "bootstrap": "^4.1.3",
         "datatables": "^1.10.18",
+        "datatables.net-plugins": "^1.10.18",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
         "moment": "^2.22.2",
