upgrade to symfony 4.2

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "*",
         "symfony/serializer-pack": "^1.0",
+        "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/webpack-encore-pack": "^1.0",
@@ -72,7 +73,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.1.*"
+            "require": "4.2.*"
         }
     }
 }
