--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,9 @@ services:
     ports:
       - "8083:80"
     volumes:
-      - "./:/var/www"
-      - "./vendor/:/var/www/vendor/:cached"
+      - "./:/var/www:cached"
     networks:
       - "internal"
-    tmpfs:
-      - "/var/www/var/"
 
 networks:
   "internal":
