--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "*",
         "symfony/serializer-pack": "^1.0",
-        "symfony/translation": "4.2.*",
+        "symfony/translation": "*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/webpack-encore-pack": "^1.0",
