--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "squizlabs/php_codesniffer": "^3.3",
         "symfony/dotenv": "*",
         "symfony/phpunit-bridge": "*",
-        "symfony/var-dumper": "4.1.*"
+        "symfony/var-dumper": "^4.3"
     },
     "config": {
         "preferred-install": {
