--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "build": "encore production"
     },
     "dependencies": {
-        "admin-lte": "3.0.0-alpha.2",
+        "admin-lte": "^3.0.0",
         "bootstrap": "^4.1.3",
         "datatables": "^1.10.18",
         "datatables.net-plugins": "^1.10.18",
