--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
             curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
             echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
             sudo apt-get update -qq
-            sudo apt-get install -y -qq yarn
+            sudo apt-get install -y -qq nodejs yarn
             composer install
             yarn
             yarn run encore dev
