--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,12 @@
         "php": "^7.4.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "*",
+        "doctrine/doctrine-migrations-bundle": "^2.1",
+        "doctrine/orm": "*",
         "mpdf/mpdf": "^8.0",
+        "phpdocumentor/reflection-docblock": "*",
         "sensio/framework-extra-bundle": "^5.2",
         "sensiolabs/security-checker": "^5.0",
         "symfony/apache-pack": "^1.0",
@@ -13,9 +18,10 @@
         "symfony/flex": "^1.1",
         "symfony/form": "*",
         "symfony/framework-bundle": "*",
-        "symfony/orm-pack": "^1.0",
+        "symfony/property-access": "4.4.*",
+        "symfony/property-info": "4.4.*",
         "symfony/security-bundle": "*",
-        "symfony/serializer-pack": "^1.0",
+        "symfony/serializer": "4.4.*",
         "symfony/translation": "*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
