--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,6 @@ language: php
 php:
   - '7.4'
 
-env:
-  - NODE_RELEASE=10.x
-
-before_install:
-  - sudo rm -rf ~/.nvm - curl -sL "https://deb.nodesource.com/setup_${NODE_RELEASE}" | sudo -E bash -
-  - sudo apt-get install -y nodejs
-
 jobs:
   include:
     - stage: "Tests"
@@ -17,10 +10,13 @@ jobs:
           (
             set -Eeuo pipefail
             set -x
+            curl -sL "https://deb.nodesource.com/setup_10.x" | sudo -E bash -
+            sudo apt-get install -y nodejs
             curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
             echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
             sudo apt-get update -qq
             sudo apt-get install -y -qq yarn
+            node -v
             composer install
             yarn
             yarn run encore dev
