--- a/.travis.yml
+++ b/.travis.yml
@@ -4,28 +4,28 @@ php:
 
 jobs:
   include:
-    - stage: "Tests"
-      script:
-        - |
-          (
-            set -Eeuo pipefail
-            set -x
-            curl -sL "https://deb.nodesource.com/setup_10.x" | sudo -E bash -
-            sudo apt-get install -y nodejs
-            curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-            echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-            sudo apt-get update -qq
-            sudo apt-get install -y -qq yarn
-            node -v
-            composer install
-            yarn
-            yarn run encore dev
-            vendor/bin/phpcs --error-severity=1 --warning-severity=8 --extensions=php
-            vendor/bin/phpmd src/ text controversial,design,unusedcode --exclude src/Migrations/
-            vendor/bin/phpstan analyse -l max -c phpstan.neon src
-            vendor/bin/security-checker security:check composer.lock
-            SYMFONY_DEPRECATIONS_HELPER=weak bin/phpunit -d memory_limit=-1
-          )
+    #- stage: "Tests"
+    #  script:
+    #    - |
+    #      (
+    #        set -Eeuo pipefail
+    #        set -x
+    #        curl -sL "https://deb.nodesource.com/setup_10.x" | sudo -E bash -
+    #        sudo apt-get install -y nodejs
+    #        curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+    #        echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+    #        sudo apt-get update -qq
+    #        sudo apt-get install -y -qq yarn
+    #        node -v
+    #        composer install
+    #        yarn
+    #        yarn run encore dev
+    #        vendor/bin/phpcs --error-severity=1 --warning-severity=8 --extensions=php
+    #        vendor/bin/phpmd src/ text controversial,design,unusedcode --exclude src/Migrations/
+    #        vendor/bin/phpstan analyse -l max -c phpstan.neon src
+    #        vendor/bin/security-checker security:check composer.lock
+    #        SYMFONY_DEPRECATIONS_HELPER=weak bin/phpunit -d memory_limit=-1
+    #      )
     - stage: "Build"
       if: branch = master
       script:
