--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -24,12 +24,13 @@ RUN apt update && apt install -y mariadb-client unzip libzip-dev libc-client-dev
  && docker-php-source delete
 
 RUN apt install -y gnupg \
- && curl -sL https://deb.nodesource.com/setup_10.x | bash \
+ && curl -sL https://deb.nodesource.com/setup_14.x | bash \
  && apt-get install -y nodejs \
  && curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
  && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
  && apt-get update \
  && apt-get install yarn \
- && curl -s https://getcomposer.org/installer | php ; mv composer.phar /usr/local/bin/composer
+ && curl -s https://getcomposer.org/installer | php ; mv composer.phar /usr/local/bin/composer \
+ && curl -sS https://get.symfony.com/cli/installer | bash; mv /root/.symfony/bin/symfony /usr/local/bin/symfony
 
 WORKDIR /var/www/public
