--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "mpdf/mpdf": "^8.0",
         "phpdocumentor/reflection-docblock": "*",
         "sensio/framework-extra-bundle": "^5.2",
-        "sensiolabs/security-checker": "^5.0",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
@@ -63,8 +62,7 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "security-checker security:check": "script"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
