--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
+    "dependencies": {
+        "admin-lte": "~3.0.0",
+        "bootstrap": "^4.1.3",
+        "datatables": "^1.10.18",
+        "datatables.net-plugins": "^1.10.18",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.3.1",
+        "moment": "^2.22.2",
+        "popper.js": "^1.14.4",
+        "sass": "^1.34.1",
+        "sass-loader": "^12.1.0",
+        "tether": "^1.4.5"
+    },
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.20.0",
-        "webpack-notifier": "^1.7.0"
+        "@symfony/stimulus-bridge": "^2.0.0",
+        "@symfony/webpack-encore": "^1.0.0",
+        "core-js": "^3.0.0",
+        "regenerator-runtime": "^0.13.2",
+        "stimulus": "^2.0.0",
+        "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -9,19 +26,6 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production"
-    },
-    "dependencies": {
-        "admin-lte": "^3.0.0",
-        "bootstrap": "^4.1.3",
-        "datatables": "^1.10.18",
-        "datatables.net-plugins": "^1.10.18",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.3.1",
-        "moment": "^2.22.2",
-        "node-sass": "^4.9.3",
-        "popper.js": "^1.14.4",
-        "sass-loader": "^7.1.0",
-        "tether": "^1.4.5"
+        "build": "encore production --progress"
     }
 }
