fix project name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "accownting",
+    "name": "jost-devops/accownting",
     "type": "project",
     "license": "proprietary",
     "require": {
