--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.6"
 services:
   "db":
-    image: "mysql:5.7"
+    image: "mysql/mysql-server:5.7"
     ports:
       - "3392:3306"
     environment:
